--- a/COVIDiary/Base.lproj/Main.storyboard
+++ b/COVIDiary/Base.lproj/Main.storyboard
@@ -162,7 +162,7 @@
             <objects>
                 <viewController id="Mcc-08-kcE" customClass="myMemoriesViewController" customModule="COVIDiary" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7Ug-1b-0UH">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="1146"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="1346"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="final image" translatesAutoresizingMaskIntoConstraints="NO" id="PPo-Ax-tZT">
@@ -177,16 +177,24 @@
                                 <rect key="frame" x="20" y="530" width="181" height="249"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Screen Shot 2020-07-29 at 10.37.39 AM" translatesAutoresizingMaskIntoConstraints="NO" id="kxZ-BG-RPX">
+                                <rect key="frame" x="20" y="955" width="277" height="166"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="IMG_1234" translatesAutoresizingMaskIntoConstraints="NO" id="OJH-Og-rAb">
+                                <rect key="frame" x="122" y="787" width="301" height="160"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="vv4-KP-Ins"/>
                     </view>
                     <navigationItem key="navigationItem" id="sQm-En-shK"/>
-                    <size key="freeformSize" width="414" height="1200"/>
+                    <size key="freeformSize" width="414" height="1400"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rP0-A2-a9v" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-402.89855072463769" y="948.88392857142856"/>
+            <point key="canvasLocation" x="-393" y="1045"/>
         </scene>
         <!--Add Image View Controller-->
         <scene sceneID="LId-xf-6HY">
@@ -290,6 +298,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="IMG_1234" width="5184" height="3456"/>
+        <image name="Screen Shot 2020-07-29 at 10.37.39 AM" width="2802" height="1412"/>
         <image name="final image" width="3024" height="4032"/>
         <image name="map button background" width="132" height="120"/>
         <image name="my memories button" width="391" height="97"/>
